; ModuleID = '/home/carl/AnghaBench/oss-fuzz/projects/zlib/extr_compress_fuzzer.c_check_compress_level.c'
source_filename = "/home/carl/AnghaBench/oss-fuzz/projects/zlib/extr_compress_fuzzer.c_check_compress_level.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@data = common dso_local global i32 0, align 4
@dataLen = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i32*, i64, i32)* @check_compress_level to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_compress_level(i32* %0, i64 %1, i32* %2, i64 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32* %2, i32** %8, align 8
  store i64 %3, i64* %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load i32*, i32** %6, align 8
  %12 = load i32, i32* @data, align 4
  %13 = load i64, i64* @dataLen, align 8
  %14 = load i32, i32* %10, align 4
  %15 = call i32 @compress2(i32* %11, i64* %7, i32 %12, i64 %13, i32 %14)
  %16 = load i32*, i32** %8, align 8
  %17 = load i32*, i32** %6, align 8
  %18 = load i64, i64* %7, align 8
  %19 = call i32 @uncompress(i32* %16, i64* %9, i32* %17, i64 %18)
  %20 = load i64, i64* @dataLen, align 8
  %21 = load i64, i64* %9, align 8
  %22 = icmp eq i64 %20, %21
  %23 = zext i1 %22 to i32
  %24 = call i32 @assert(i32 %23)
  %25 = load i32, i32* @data, align 4
  %26 = load i32*, i32** %8, align 8
  %27 = load i64, i64* @dataLen, align 8
  %28 = call i64 @memcmp(i32 %25, i32* %26, i64 %27)
  %29 = icmp eq i64 0, %28
  %30 = zext i1 %29 to i32
  %31 = call i32 @assert(i32 %30)
  ret void
}

declare dso_local i32 @compress2(i32*, i64*, i32, i64, i32) #1

declare dso_local i32 @uncompress(i32*, i64*, i32*, i64) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @memcmp(i32, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
